src/components/Form.css
/* Компонент Форма */
.form {
    display: flex;
    flex-direction: column;
    max-width: 600px;
    font-family: 'Inter', Arial, Helvetica, sans-serif;
}

.form__heading {
    font-size: 50px;
    line-height: 1.2;
    font-weight: 400;
    font-style: italic;
    text-transform: uppercase;
    margin-top: 65px;
    margin-bottom: 40px;
}

.form__text {
    margin-top: 0;
    margin-bottom: 60px;
    font-size: 16px;
    line-height: 1.4;
}

.form__input {
    margin-bottom: 10px;
    padding: 20px 0;
    border: none;
    border-bottom: 2px solid #000;
}

.form__input::placeholder {
  font-size: 16px;
  line-height: 1.2;
  color: rgba(0, 0, 0, 0.4);
}

.form__input:focus {
    outline: none;
    box-shadow: 0 0 4px 2px #00000040;
}

.form__textarea {
    margin-bottom: 10px;
    padding: 20px 0 2px 0;
    resize: none;
    border: none;
    border-bottom: 2px solid #000;
}
  
.form__input_radio {
    position: absolute;
    width: 1px;
    height: 1px;
    overflow: hidden;
    clip: rect(0 0 0 0);
}
  
.form__input-label {
    margin-top: 34px;
}
  
.form__label-text {
    margin-left: 16px;
    font-size: 18px;
    line-height: 1.2;
}

.form__offer-link {
    color: #000;
}

.form__pseudo-item {
    display: inline-block;
    vertical-align: middle;
    width: 25px;
    height: 25px;
    margin-bottom: 5px;
    border: 2px solid black;
    border-radius: 50%;
}


/* Активная радиокнопка */
.form__input_radio:checked + .form__pseudo-item {
    background-color: #000;
}

.form__input_radio:hover + .form__pseudo-item {
    cursor: pointer;
    background-color: #00000040; 
    transition: background-color .4s ease-out;
}

.form__submit-button {
    height: 60px;
    margin-top: 38px;
    background-color: #fff;
    border: 2px solid #000;
    border-radius: 30px;
    font-size: 16px;
    line-height: 1.2;
    transition: background-color 0.4s ease-out;
}

.form__submit-button:hover {
   box-shadow: 0 0 8px 4px #00000040;
   background-color: rgb(0, 0, 0);
   color: #fff;
   cursor: pointer;
   font-style: italic;
}

.form__submit-button:focus {
    outline: none;
}

.form__input-error {
    color: red;
    font-size: 16px;
    line-height: 1.2;
}

.form__input_invalid {
    color: red;
    border-bottom: 2px solid red;
}

.form__wrong-submit {
    margin: 20px auto 0 auto;
    color: red;
    font-size: 16px;
    line-height: 1.2;
}

/* Адаптивная верстка для брекпоинта 1024px */
@media screen and (max-width:1024px) {
    .form__heading {
        font-size: 46px;
    }

    .form__text {
        font-size: 15px;
        line-height: 1.5;
    }

    .form__label-text  {
        font-size: 15px;
    }

    .form__submit-button {
        font-size: 15px;
    }
}

/* Адаптивная верстка для брейкпоинта 768px */
@media screen and (max-width:768px) {
    .form {
        max-width: 100%;
    }
    
    .form__heading {
        font-size: 42px;
    }
}

  /* Адаптивная верстка для брейкпоинта 480px */
@media screen and (max-width:480px) {
    .form__heading {
        font-size: 32px;
        margin-bottom: 30px;
    }

    .form__text {
        margin-bottom: 40px;
        font-size: 12px;
        line-height: 1.4;
    }

    .form__input {
        margin-bottom: 6px;
        font-size: 14px;
    }
    
    .form__input::placeholder {
        font-size: 14px;
    }

    .form__input-label {
        margin-top: 28px;
    }
    
    .form__label-text {
        font-size: 12px;
        line-height: 1.8;
    }

    .form__submit-button {
        height: 42px;
        font-size: 12px;
    }

    .form__input-error {
        font-size: 14px;
    }
    
    .form__wrong-submit {
        font-size: 14px;
    }
}


/* Возможность для анимации курсива на кнопке */
/* .form__button-text {
    margin: 0;
    padding: 18px 25px;
    box-sizing: border-box;
    font-size: 16px;
    display: inline-block;
    transition: transform 0.4s ease-out;
}

.form__button-text:hover {
    transform: skew(-9deg);
}

@media screen and (max-width:1024px) {
    .form__button-text  {
        font-size: 15px;
    }
  }
  
@media screen and (max-width:480px) {
    .form__button-text {
        padding: 0;
        font-size: 12px;
    }
} */

